Update wedding details from Romeo & Juliet to Tobias & Diana

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Wedding of Romeo & Juliet</title>
+    <title>The Wedding of Tobias & Diana</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
@@ -65,7 +65,7 @@
     <div id="cover" class="fixed inset-0 z-50 flex flex-col items-center justify-center min-h-screen text-center text-white cover-bg bg-black/50 bg-blend-overlay transition-opacity duration-1000">
         <div class="p-6 space-y-6">
             <h3 class="text-lg tracking-widest uppercase mb-2">The Wedding Of</h3>
-            <h1 class="text-6xl font-script mb-4 text-pink-200">Romeo & Juliet</h1>
+            <h1 class="text-6xl font-script mb-4 text-pink-200">Tobias & Diana</h1>
             
             <div class="mt-8 p-4 bg-white/10 backdrop-blur-sm rounded-xl border border-white/30">
                 <p class="text-sm mb-2">Kepada Yth. Bapak/Ibu/Saudara/i</p>
@@ -101,7 +101,7 @@
             </div>
 
             <p class="text-pink-600 tracking-widest uppercase text-sm mb-4">We Are Getting Married</p>
-            <h1 class="text-5xl md:text-7xl font-script text-gray-800 mb-6">Romeo & Juliet</h1>
+            <h1 class="text-5xl md:text-7xl font-script text-gray-800 mb-6">Tobias & Diana</h1>
             <p class="text-lg text-gray-600 mb-8">Minggu, 17 Agustus 2025</p>
             
             <!-- Countdown -->
@@ -136,9 +136,9 @@
                     <div class="w-48 h-48 rounded-full overflow-hidden border-4 border-pink-200 shadow-xl mb-4">
                         <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Groom" class="w-full h-full object-cover">
                     </div>
-                    <h2 class="text-4xl font-script text-pink-600 mb-2">Romeo Montague</h2>
-                    <p class="text-gray-600 font-bold">Putra Pertama</p>
-                    <p class="text-gray-500 text-sm">Bpk. Montague & Ibu Lady Montague</p>
+                    <h2 class="text-4xl font-script text-pink-600 mb-2">Sherwin Tobias Rama Sihombing, S.H.</h2>
+                    <p class="text-gray-600 font-bold">Putra</p>
+                    <p class="text-gray-500 text-sm">Bpk. Drs. Rudy Tumpal Halomoan Sihombing & Ibu Deacy Maria Br.Lumbanraja</p>
                 </div>
 
                 <div class="md:hidden text-4xl font-script text-gray-300">&</div>
@@ -148,9 +148,9 @@
                     <div class="w-48 h-48 rounded-full overflow-hidden border-4 border-pink-200 shadow-xl mb-4">
                         <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Bride" class="w-full h-full object-cover">
                     </div>
-                    <h2 class="text-4xl font-script text-pink-600 mb-2">Juliet Capulet</h2>
-                    <p class="text-gray-600 font-bold">Putri Kedua</p>
-                    <p class="text-gray-500 text-sm">Bpk. Capulet & Ibu Lady Capulet</p>
+                    <h2 class="text-4xl font-script text-pink-600 mb-2">Bdn. Diana Simamora, S.Keb.</h2>
+                    <p class="text-gray-600 font-bold">Putri</p>
+                    <p class="text-gray-500 text-sm">Bpk. Pdt. Marsihat Simamora & Ibu Risma Br. Simanjuntak</p>
                 </div>
             </div>
         </section>
@@ -164,17 +164,17 @@
                     <!-- Akad -->
                     <div class="bg-pink-50 p-8 rounded-2xl border border-pink-100 shadow-sm hover:shadow-md transition">
                         <div class="text-4xl mb-4">💍</div>
-                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Akad Nikah</h3>
-                        <p class="text-gray-600 font-semibold mb-1">Minggu, 17 Agustus 2025</p>
-                        <p class="text-gray-500 mb-4">Pukul 08.00 WIB - Selesai</p>
+                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Pemberkatan Nikah</h3>
+                        <p class="text-gray-600 font-semibold mb-1">Sabtu, 18 Februari 2026</p>
+                        <p class="text-gray-500 mb-4">Pukul 10.00 WIB - Selesai</p>
                     </div>
 
                     <!-- Resepsi -->
                     <div class="bg-pink-50 p-8 rounded-2xl border border-pink-100 shadow-sm hover:shadow-md transition">
                         <div class="text-4xl mb-4">🥂</div>
-                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Resepsi</h3>
-                        <p class="text-gray-600 font-semibold mb-1">Minggu, 17 Agustus 2025</p>
-                        <p class="text-gray-500 mb-4">Pukul 11.00 WIB - 14.00 WIB</p>
+                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Resepsi Adat</h3>
+                        <p class="text-gray-600 font-semibold mb-1">Sabtu, 18 Februari 2026</p>
+                        <p class="text-gray-500 mb-4">Pukul 11.00 WIB - 12.00 WIB</p>
                     </div>
                 </div>
 
@@ -188,7 +188,7 @@
 
         <!-- FOOTER -->
         <footer class="bg-gray-900 text-gray-400 py-8 text-center text-sm">
-            <h2 class="text-2xl font-script text-gray-200 mb-2">Romeo & Juliet</h2>
+            <h2 class="text-2xl font-script text-gray-200 mb-2">Tobias & Diana</h2>
             <p>&copy; 2025 All Rights Reserved.</p>
         </footer>
 
