--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <p class="text-pink-600 tracking-widest uppercase text-sm mb-4">We Are Getting Married</p>
             <h1 class="text-5xl md:text-7xl font-script text-gray-800 mb-6">Tobias & Diana</h1>
-            <p class="text-lg text-gray-600 mb-8">Minggu, 17 Agustus 2025</p>
+            <p class="text-lg text-gray-600 mb-8">Sabtu, 14 Februari 2026</p>
             
             <!-- Countdown -->
             <div class="flex gap-4 justify-center mb-8">
