Update groom image source to direct download link

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <!-- Groom -->
                 <div class="flex flex-col items-center">
                     <div class="w-48 h-48 rounded-full overflow-hidden border-4 border-pink-200 shadow-xl mb-4">
-                        <img src="https://drive.google.com/file/d/18HdD51_p72-N5AtihzKMkHzj2y5qqDup/view?usp=drive_link" alt="Groom" class="w-full h-full object-cover">
+                        <img src="https://drive.google.com/uc?export=download&id=18HdD51_p72-N5AtihzKMkHzj2y5qqDup" alt="Groom" class="w-full h-full object-cover">
                     </div>
                     <h2 class="text-4xl font-script text-pink-600 mb-2">Sherwin Tobias Rama Sihombing, S.H.</h2>
                     <p class="text-gray-600 font-bold">Putra</p>
